--- a/teste.html
+++ b/teste.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/teste.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="container" id="dia">
         <div class="logo">
@@ -21,133 +23,167 @@
             </nav>
         </div>
         <div class="quadro">
-                <h1>Aqui estão os melhores parques da região de São Paulo</h1>
-                <ul>
-                    <li><a href="#ibira"><img src="img/ibirapuera.jpg" class="min"></a></li>
-                    <li><a href="#jb"><img src="img/jardim-botanico.jpg" class="min"></a></li>
-                    <li><a href="#alf"><img src="img/parque-alfredo-volpi.jpg" class="min"></a></li>
-                    <li><a href="#ba"><img src="img/parque-buenos-aires.jpg" class="min"></a></li>
-                    <li><a href="#ind"><img src="img/parque-da-independencia.jpg" class="min"></a></li>
-                </ul>
+            <h1>Aqui estão os melhores parques da região de São Paulo</h1>
+            <ul>
+                <li><a href="#ibira"><img src="img/ibirapuera.jpg" class="min"></a></li>
+                <li><a href="#jb"><img src="img/jardim-botanico.jpg" class="min"></a></li>
+                <li><a href="#alf"><img src="img/parque-alfredo-volpi.jpg" class="min"></a></li>
+                <li><a href="#ba"><img src="img/parque-buenos-aires.jpg" class="min"></a></li>
+                <li><a href="#ind"><img src="img/parque-da-independencia.jpg" class="min"></a></li>
+            </ul>
             <div class="barra">
-                <div class="bloco2" id="ibira"><!--Ibirapuera-->
+                <div class="bloco2" id="ibira">
+                    <!--Ibirapuera-->
                     <a href="teste.html" class="close">X</a>
                     <img src="img/ibirapuera.jpg" alt="Ibirapuera">
                     <h2>Ibirapuera</h2>
                     <hr>
-                    <div class="DesAva"> <!--Descrição e Avaliação-->
-                        <p>O Parque Ibirapuera é um parque urbano localizado na cidade de São Paulo, Brasil. Em 2017, foi o parque mais visitado da América Latina, com aproximadamente 14 milhões de visitas, além de ser um dos locais mais fotografados do mundo.</p>
+                    <div class="DesAva">
+                        <!--Descrição e Avaliação-->
+                        <p>O Parque Ibirapuera é um parque urbano localizado na cidade de São Paulo, Brasil. Em 2017,
+                            foi o parque mais visitado da América Latina, com aproximadamente 14 milhões de visitas,
+                            além de ser um dos locais mais fotografados do mundo.</p>
                         <div class="auto"> 4,7 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"></div>
                     </div>
                     <div class="list">
-                            <ul>
-                                <li>Horario de funcionamento : 05:00 - 00:00</li>
-                                <li>Telefone para contato: (11) 5574-5045</li>
-                                <li>Site : <a href="https://parqueibirapuera.org/">https://parqueibirapuera.org</a></li>
-                            </ul>
+                        <ul>
+                            <li>Horario de funcionamento : 05:00 - 00:00</li>
+                            <li>Telefone para contato: (11) 5574-5045</li>
+                            <li>Site : <a href="https://parqueibirapuera.org/">https://parqueibirapuera.org</a></li>
+                        </ul>
                     </div>
                     <h3>Localização :</h3>
                     <p>Av. Pedro Álvares Cabral - Vila Mariana, São Paulo</p>
 
-                        <div class="mapa">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.471673081656!2d-46.6598222841046!3d-23.58741126844188!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59f1069d11d1%3A0xcb936109af9ce541!2sParque%20Ibirapuera!5e0!3m2!1spt-BR!2sbr!4v1622751759953!5m2!1spt-BR!2sbr"></iframe>
-                        </div>
+                    <div class="mapa">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.471673081656!2d-46.6598222841046!3d-23.58741126844188!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59f1069d11d1%3A0xcb936109af9ce541!2sParque%20Ibirapuera!5e0!3m2!1spt-BR!2sbr!4v1622751759953!5m2!1spt-BR!2sbr"></iframe>
                     </div>
                 </div>
-                <div class="bloco2" id="jb"> <!--Jardim Botanico-->
-                    <a href="teste.html" class="close">X</a>
+            </div>
+            <div class="bloco2" id="jb">
+                <!--Jardim Botanico-->
+                <a href="teste.html" class="close">X</a>
                 <img src="img/jardim-botanico.jpg" alt="jardim-botanico">
-                    <h2>Jardim Botanico</h2>
-                    <hr>
-                    <div class="DesAva"> <!--Descrição e Avaliação-->
-                        <p>O Jardim Botânico de São Paulo foi fundado em 1928 a partir de um convite feito ao naturalista brasileiro Frederico Carlos Hoehne, para que implantasse um projeto de botânica na região da Água Funda, na cidade de São Paulo. Antes disso a região servia para abastecimento de água do Ipiranga</p>
-                        <div class="auto"> 4,7 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"></div>
-                    </div>
-                        <div class="list">
-                                <ul>
-                                <li> Horario de funcionamento : 9:00 - 17:00 </li>
-                                <li> Telefone para contato : (11) 5067-6000</li>
-                                <li> Valor de entrada : R$ 10,00</li>
-                                <li> Site :  <a href="https://jardimbotanico.sp.gov.br/">https://jardimbotanico.sp.gov.br/</a></li>
-                                </ul>
-                        </div>
-                        <h3>Localização:</h3>
-                        <p>Av. Miguel Estéfno, 3031 - Vila Água Funda, São Paulo</p>
-                        <div class="mapa">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3655.0253050835654!2d-46.62920458502071!3d-23.63926478464427!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5b2203b99f37%3A0xe02451c8d4f252bc!2sJardim%20Bot%C3%A2nico%20de%20S%C3%A3o%20Paulo!5e0!3m2!1spt-BR!2sbr!4v1622753153956!5m2!1spt-BR!2sbr"></iframe>    
-                        </div>
+                <h2>Jardim Botanico</h2>
+                <hr>
+                <div class="DesAva">
+                    <!--Descrição e Avaliação-->
+                    <p>O Jardim Botânico de São Paulo foi fundado em 1928 a partir de um convite feito ao naturalista
+                        brasileiro Frederico Carlos Hoehne, para que implantasse um projeto de botânica na região da
+                        Água Funda, na cidade de São Paulo. Antes disso a região servia para abastecimento de água do
+                        Ipiranga</p>
+                    <div class="auto"> 4,7 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"></div>
                 </div>
+                <div class="list">
+                    <ul>
+                        <li> Horario de funcionamento : 9:00 - 17:00 </li>
+                        <li> Telefone para contato : (11) 5067-6000</li>
+                        <li> Valor de entrada : R$ 10,00</li>
+                        <li> Site : <a href="https://jardimbotanico.sp.gov.br/">https://jardimbotanico.sp.gov.br/</a>
+                        </li>
+                    </ul>
+                </div>
+                <h3>Localização:</h3>
+                <p>Av. Miguel Estéfno, 3031 - Vila Água Funda, São Paulo</p>
+                <div class="mapa">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3655.0253050835654!2d-46.62920458502071!3d-23.63926478464427!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5b2203b99f37%3A0xe02451c8d4f252bc!2sJardim%20Bot%C3%A2nico%20de%20S%C3%A3o%20Paulo!5e0!3m2!1spt-BR!2sbr!4v1622753153956!5m2!1spt-BR!2sbr"></iframe>
+                </div>
+            </div>
             <div class="barra" id="alf">
-                <div class="bloco2"><!--parque alfredo volpi-->
+                <div class="bloco2">
+                    <!--parque alfredo volpi-->
                     <a href="teste.html" class="close">X</a>
                     <img src="img/parque-alfredo-volpi.jpg" alt="parque-alfredo-volpi">
                     <h2> Parque Alfredo Volpi</h2>
                     <hr>
-                    <div class="DesAva"> <!--Descrição e Avaliação-->
-                        <p>O Parque Alfredo Volpi é um parque localizado no bairro de Cidade Jardim, distrito do Morumbi, na zona oeste da cidade brasileira de São Paulo e Prefeitura Regional do Butantã. Possui uma área de 142.432 m²</p>
+                    <div class="DesAva">
+                        <!--Descrição e Avaliação-->
+                        <p>O Parque Alfredo Volpi é um parque localizado no bairro de Cidade Jardim, distrito do
+                            Morumbi, na zona oeste da cidade brasileira de São Paulo e Prefeitura Regional do Butantã.
+                            Possui uma área de 142.432 m²</p>
                         <div class="auto"> 4,5 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"></div>
                     </div>
                     <div class="list">
-                            <ul>
-                                <li>Horario de funcionamento : 06:00 - 18:00</li>
-                                <li>Telefone para contato: (11) 3031-7052</li>
-                                <li>Site : <a href="https://www.prefeitura.sp.gov.br/cidade/secretarias/meio_ambiente/parques/regiao_centrooeste/index.php?p=5729">parque-alfredo-volpi</a></li>
-                            </ul>
+                        <ul>
+                            <li>Horario de funcionamento : 06:00 - 18:00</li>
+                            <li>Telefone para contato: (11) 3031-7052</li>
+                            <li>Site : <a
+                                    href="https://www.prefeitura.sp.gov.br/cidade/secretarias/meio_ambiente/parques/regiao_centrooeste/index.php?p=5729">parque-alfredo-volpi</a>
+                            </li>
+                        </ul>
                     </div>
                     <h3>Localização :</h3>
                     <p>Av. Pedro Álvares Cabral - Vila Mariana, São Paulo</p>
                     <div class="mapa">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7312.936409220642!2d-46.70064319054845!3d-23.58753574461653!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce57186705553f%3A0x5ec743cded62ce64!2sParque%20Alfredo%20Volpi!5e0!3m2!1spt-BR!2sbr!4v1622755074752!5m2!1spt-BR!2sbr"></iframe> 
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7312.936409220642!2d-46.70064319054845!3d-23.58753574461653!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce57186705553f%3A0x5ec743cded62ce64!2sParque%20Alfredo%20Volpi!5e0!3m2!1spt-BR!2sbr!4v1622755074752!5m2!1spt-BR!2sbr"></iframe>
                     </div>
                 </div>
-                <div class="bloco2" id="ba"> <!--parque buenos aires-->
+                <div class="bloco2" id="ba">
+                    <!--parque buenos aires-->
                     <a href="teste.html" class="close">X</a>
-                <img src="img/parque-buenos-aires.jpg" alt="parque-buenos-aires">
+                    <img src="img/parque-buenos-aires.jpg" alt="parque-buenos-aires">
                     <h2>Parque Buenos Aires</h2>
                     <hr>
-                    <div class="DesAva"> <!--Descrição e Avaliação-->
-                        <p>Parque Buenos Aires é um parque público localizado no bairro de Higienópolis, na região central da cidade de São Paulo, outrora chamado Praça Buenos Aires. O local conta com 22,2 mil metros quadrados de extensa área verde</p>
+                    <div class="DesAva">
+                        <!--Descrição e Avaliação-->
+                        <p>Parque Buenos Aires é um parque público localizado no bairro de Higienópolis, na região
+                            central da cidade de São Paulo, outrora chamado Praça Buenos Aires. O local conta com 22,2
+                            mil metros quadrados de extensa área verde</p>
                         <div class="auto"> 4,5 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"></div>
                     </div>
-                        <div class="list">
-                                <ul>
-                                <li> Horario de funcionamento : 06:00 - 19:00</li>
-                                <li> Telefone para contato : (11) 3666-8032</li>
-                                <li> Site : <a href="https://www.prefeitura.sp.gov.br/cidade/secretarias/meio_ambiente/parques/regiao_centrooeste/index.php?p=5732">parque-buenos-aires</a> </li>
-                                </ul>
-                        </div>
-                        <h3>Localização :</h3>
-                        <p>Av. Angélica, 1500 - Higienópolis, São Paulo</p>
-                        <div class="mapa">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.6365581790014!2d-46.66091168502246!3d-23.545570884690708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce583a68a83b5d%3A0x3f58960662014c8d!2sParque%20Buenos%20Aires!5e0!3m2!1spt-BR!2sbr!4v1622756044381!5m2!1spt-BR!2sbr"></iframe>
-                        </div>
+                    <div class="list">
+                        <ul>
+                            <li> Horario de funcionamento : 06:00 - 19:00</li>
+                            <li> Telefone para contato : (11) 3666-8032</li>
+                            <li> Site : <a
+                                    href="https://www.prefeitura.sp.gov.br/cidade/secretarias/meio_ambiente/parques/regiao_centrooeste/index.php?p=5732">parque-buenos-aires</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <h3>Localização :</h3>
+                    <p>Av. Angélica, 1500 - Higienópolis, São Paulo</p>
+                    <div class="mapa">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.6365581790014!2d-46.66091168502246!3d-23.545570884690708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce583a68a83b5d%3A0x3f58960662014c8d!2sParque%20Buenos%20Aires!5e0!3m2!1spt-BR!2sbr!4v1622756044381!5m2!1spt-BR!2sbr"></iframe>
+                    </div>
                 </div>
             </div>
             <div class="barra">
-                <div class="bloco2" id="ind"><!--parque da independencia-->
+                <div class="bloco2" id="ind">
+                    <!--parque da independencia-->
                     <a href="teste.html" class="close">X</a>
                     <img src="img/parque-da-independencia.jpg" alt="parque-da-independencia">
                     <h2> Parque Alfredo Volpi</h2>
                     <hr>
-                    <div class="DesAva"> <!--Descrição e Avaliação-->
-                        <p>O Parque da Independência, inaugurado em 1989, nas margens do córrego do bairro do Ipiranga, na cidade de São Paulo, faz parte do patrimônio histórico cultural brasileiro devido ao Grito da Independência do país, ali proclamada por D. Pedro I</p>
+                    <div class="DesAva">
+                        <!--Descrição e Avaliação-->
+                        <p>O Parque da Independência, inaugurado em 1989, nas margens do córrego do bairro do Ipiranga,
+                            na cidade de São Paulo, faz parte do patrimônio histórico cultural brasileiro devido ao
+                            Grito da Independência do país, ali proclamada por D. Pedro I</p>
                         <div class="auto"> 4,6 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"></div>
                     </div>
                     <div class="list">
-                            <ul>
-                                <li>Horario de funcionamento : 06:00 - 18:00</li>
-                                <li>Telefone para contato: (11) 2273-7250</li>
-                                <li>Site : <a href="https://www.prefeitura.sp.gov.br/cidade/secretarias/meio_ambiente/parques/regiao_sul/index.php?p=5747">parque-da-independencia</a></li>
-                            </ul>
+                        <ul>
+                            <li>Horario de funcionamento : 06:00 - 18:00</li>
+                            <li>Telefone para contato: (11) 2273-7250</li>
+                            <li>Site : <a
+                                    href="https://www.prefeitura.sp.gov.br/cidade/secretarias/meio_ambiente/parques/regiao_sul/index.php?p=5747">parque-da-independencia</a>
+                            </li>
+                        </ul>
                     </div>
                     <h3>Localização :</h3>
                     <p> Av. Nazaré, s/n - Ipiranga, São Paulo </p>
                     <div class="mapa">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.562181699042!2d-46.61201598502182!3d-23.58416288467166!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5b944452677b%3A0xd8cac2fbf200334a!2sParque%20Independ%C3%AAncia!5e0!3m2!1spt-BR!2sbr!4v1622758226488!5m2!1spt-BR!2sbr"></iframe>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.562181699042!2d-46.61201598502182!3d-23.58416288467166!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5b944452677b%3A0xd8cac2fbf200334a!2sParque%20Independ%C3%AAncia!5e0!3m2!1spt-BR!2sbr!4v1622758226488!5m2!1spt-BR!2sbr"></iframe>
                     </div>
                 </div>
-                </div>
+            </div>
         </div>
     </div>
 </body>
+
 </html>
