--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
-</head>  
+</head>
+
 <body>
     <div class="container" id="home">
         <div class="logo">
@@ -24,10 +26,14 @@
             <img src="img/aviao-e-aeronave-imagem-animada.gif">
             <h1>Bem vindo ao projeto Traveller!</h1>
             <h2>Escolher o melhor roteiro para suas viagens nunca foi tão fácil</h2>
-            <p>Nossa missão é facilitar sua experiência de busca por roteiros de viagens, Aqui estão selecionados os melhores parques, bares e boates de São Paulo.</p>
-            
-        </div>
+            <p>Nossa missão é facilitar sua experiência de buscar por roteiros de viagens. Aqui estão selecionados os
+                melhores parques urbanos, bares e boates de São Paulo.</p>
 
+        </div>
     </div>
+    <footer id="rodape">
+        <p class="fim">Copyright &copy; Traveller</p>
+    </footer>
 </body>
+
 </html>
