ajsutes no css do rodape

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
         </div>
     </div>
-    <footer id="rodape">
-        <p class="fim">Copyright &copy; Traveller</p>
+    <footer id="rodape2">
+        <p class="fim">Copyright &copy; Traveller 2021 </p>
     </footer>
 </body>
 
