--- a/login.html
+++ b/login.html
@@ -76,6 +76,9 @@
             </div>
         </div>
     </div>
+    <footer id="rodape2">
+        <p class="fim">Copyright &copy; Traveller 2021 </p>
+    </footer>
 </body>
 
 </html>
