--- a/parques.html
+++ b/parques.html
@@ -23,7 +23,7 @@
             </nav>
         </div>
         <div class="quadro">
-            <h1>Aqui estão os melhores parques da região de São Paulo</h1>
+            <h1>Aqui estão os melhores parques urbanos da Cidade de São Paulo</h1>
             <div class="barra">
                 <div class="bloco2">
                     <!--Ibirapuera-->
@@ -144,7 +144,7 @@
                 <div class="bloco2">
                     <!--parque da independencia-->
                     <img src="img/parque-da-independencia.jpg" alt="parque-da-independencia">
-                    <h2> Parque Alfredo Volpi</h2>
+                    <h2>Parque da Independência</h2>
                     <hr>
                     <div class="DesAva">
                         <!--Descrição e Avaliação-->
@@ -172,6 +172,9 @@
             </div>
         </div>
     </div>
+    <footer id="rodape">
+        <p class="fim">Copyright &copy; Traveller 2021 </p>
+    </footer>
 </body>
 
 </html>
