--- a/vidanoturna.html
+++ b/vidanoturna.html
@@ -85,7 +85,7 @@
                                 <li> Horario de funcionamento : 12:00 - 21:00</li>
                                 <li> Melhor dia para visitação : Segunda</li>
                                 <li> Horários de maior procura : 17:00 - 19:00 (sab)</li>
-                                <li> Preços a partir de : R$ 7,00</li>
+                                <li> Preços a partir de : R$ 35,00</li>
                                 <li> Telefona para contato : (11) 3055-4702 ou 3055-4700</li>
                                 <li> Site : <a href="https://www.hotelunique.com/pt/restaurante-bar/skye/"
                                         target="_blank">https://www.hotelunique.com/pt/restaurante-bar/skye</a></li>
@@ -124,8 +124,8 @@
                                 <li> Melhor dia para visitação : Quarta</li>
                                 <li> Horários de maior procura : 17:00 - 21:00 (sab)</li>
                                 <li> Preços aplicados </li>
-                                <li> Site : <a
-                                        href="http://www.velosobar.com.br/sobre-o-veloso.php">http://www.velosobar.com.br/sobre-o-veloso.php</a>
+                                <li> Site : <a href="http://www.velosobar.com.br/sobre-o-veloso.php"
+                                        target="_blank">http://www.velosobar.com.br/sobre-o-veloso.php</a>
                                 </li>
                             </ul>
                         </div>
@@ -164,7 +164,7 @@
                             <li> Melhor dia para visitação </li>
                             <li> Horários de maior procura </li>
                             <li> Preços aplicados </li>
-                            <li>Site : <a href="http://d-edge.com.br/">http://d-edge.com.br</a></li>
+                            <li>Site : <a href="http://d-edge.com.br/" target="_blank">http://d-edge.com.br</a></li>
                         </ul>
                     </div>
                     <h3>Localização :</h3>
@@ -188,8 +188,11 @@
                     <hr>
                     <div class="DesAva">
                         <!--Descrição e Avaliação-->
-                        <p>Um dos clubes mais emblemáticos do mundo, é referência em entretenimento voltado ao público
-                            LGBTQ</p>
+                        <p>Há 16 anos André Almada criou o selo The Week em São Paulo, uma das maiores boates LGBTQIA+
+                            🌈🏳️‍🌈🏳️ da América Latina. Seu clube principal no bairro da Lapa, reuni milhares de
+                            pessoas que extravasaram a portas fechadas. O clima é eletrizante. Só quem está lá sabe o
+                            que acontece. A pista pega fogo. Clube LGBTQIA+ com pistas de dança modernas, área externa,
+                            piscina e um público amante de música eletrônica. </p>
                         <div class="auto"> 4,4 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"></div>
                     </div>
                     <div class="DesAva">
@@ -200,7 +203,8 @@
                                 <li> Horários de maior procura : Sábados</li>
                                 <li> Preços aplicados </li>
                                 <li>Telefone para contato: (11) 3868-9944</li>
-                                <li>Site : <a href="www.theweek.com.br">www.theweek.com.br</a> </li>
+                                <li>Instagram oficial:<a href="https://www.instagram.com/theweekoficial/?hl=pt-br"
+                                        target="_blank"> The Week</a> </li>
                             </ul>
                         </div>
                         <div>
@@ -217,20 +221,25 @@
                 <div class="bloco">
                     <!--villa contry-->
                     <img src="img/Villa-Country.jpg" alt="Villa-Country">
-                    <p>Legenda</p>
+                    <p>Villa Country</p>
                     <hr>
                     <div>
-                        <p>Descrição</p>
+                        <p>Inspirada na cultura dos cowboys do western, a Villa Country possui 12 mil metros quadrados
+                            divididos em vários ambientes que remetem o visitante ao velho oeste americano. É muito mais
+                            do que uma casa de shows, pois concentra restaurante, pista de dança, camarotes e centro de
+                            convenções. Ambientes diferenciados, como o Salão, as praças Sertaneja, Caipira e do Cavalo,
+                            dão o tom temático ao lugar.</p>
                         Classificação
                     </div>
                     <div class="local">
                         <div>
                             <ul>
-                                <li> Horario de funcionamento </li>
+                                <li> Horario de funcionamento Apenas aos sábados e domingos das 13:00 às 14:00. </li>
                                 <li> Melhor dia para visitação </li>
                                 <li> Horários de maior procura </li>
                                 <li> Preços aplicados </li>
-                                <li>Link de acesso ao site oficial. </li>
+                                <li>Site oficial:<a href="https://villacountry.com.br/" target="_blank">
+                                        www.villacountry.com.br</a> </li>
                             </ul>
                         </div>
                         <div class="mapa">
@@ -242,6 +251,9 @@
             </div>
         </div>
     </div>
+    <footer id="rodape1">
+        <p class="fim">Copyright &copy; Traveller 2021 </p>
+    </footer>
 </body>
 
 </html>
