--- a/vidanoturna.html
+++ b/vidanoturna.html
@@ -148,7 +148,7 @@
                 <div class="bloco">
                     <!--D-edge-->
                     <img src="img/dedge.jpg" alt="dedge">
-                    <h3>E-edge</h3>
+                    <h2>E-edge</h2>
                     <hr>
                     <div class="DesAva">
                         <!--Descrição e Avaliação-->
@@ -221,7 +221,7 @@
                 <div class="bloco">
                     <!--villa contry-->
                     <img src="img/Villa-Country.jpg" alt="Villa-Country">
-                    <p>Villa Country</p>
+                    <h2>Villa Country</h2>
                     <hr>
                     <div>
                         <p>Inspirada na cultura dos cowboys do western, a Villa Country possui 12 mil metros quadrados
