ajuste no diretorio de img

--- a/parques.html
+++ b/parques.html
@@ -27,7 +27,7 @@
             <div class="barra">
                 <div class="bloco2">
                     <!--Ibirapuera-->
-                    <img src="img/ibirapuera.jpg" alt="Ibirapuera">
+                    <img src="img/parques/ibirapuera.jpg" alt="Ibirapuera">
                     <h2>Ibirapuera</h2>
                     <hr>
                     <div class="DesAva">
@@ -54,7 +54,7 @@
                 </div>
                 <div class="bloco2">
                     <!--Jardim Botanico-->
-                    <img src="img/jardim-botanico.jpg" alt="jardim-botanico">
+                    <img src="img/parques/jardim-botanico.jpg" alt="jardim-botanico">
                     <h2>Jardim Botanico</h2>
                     <hr>
                     <div class="DesAva">
@@ -85,7 +85,7 @@
             <div class="barra">
                 <div class="bloco2">
                     <!--parque alfredo volpi-->
-                    <img src="img/parque-alfredo-volpi.jpg" alt="parque-alfredo-volpi">
+                    <img src="img/parques/parque-alfredo-volpi.jpg" alt="parque-alfredo-volpi">
                     <h2> Parque Alfredo Volpi</h2>
                     <hr>
                     <div class="DesAva">
@@ -113,7 +113,7 @@
                 </div>
                 <div class="bloco2">
                     <!--parque buenos aires-->
-                    <img src="img/parque-buenos-aires.jpg" alt="parque-buenos-aires">
+                    <img src="img/parques/parque-buenos-aires.jpg" alt="parque-buenos-aires">
                     <h2>Parque Buenos Aires</h2>
                     <hr>
                     <div class="DesAva">
@@ -143,7 +143,7 @@
             <div class="barra">
                 <div class="bloco2">
                     <!--parque da independencia-->
-                    <img src="img/parque-da-independencia.jpg" alt="parque-da-independencia">
+                    <img src="img/parques/parque-da-independencia.jpg" alt="parque-da-independencia">
                     <h2>Parque da Independência</h2>
                     <hr>
                     <div class="DesAva">
