--- a/vidanoturna.html
+++ b/vidanoturna.html
@@ -26,7 +26,7 @@
             <h1>Aqui estão alguns dos melhores locais para se divertir na vida noturna</h1>
             <div class="barra">
                 <div class="bloco">
-                    <img src="img/bar-brahma.jpg" alt="skye">
+                    <img src="img/vida-noturna/bar-brahma.jpg" alt="bar brahma">
                     <!--Bar brahma-->
                     <h2>Bar Brahma</h2>
                     <hr>
@@ -68,7 +68,7 @@
                 </div>
                 <div class="bloco">
                     <!--Skye bar-->
-                    <img src="img/skybar-unique.jpg" alt="skye">
+                    <img src="img/vida-noturna/skybar-unique.jpg" alt="skye">
                     <h2>Skye Bar</h2>
                     <hr>
                     <div class="DesAva">
@@ -106,7 +106,7 @@
             <div class="barra">
                 <div class="bloco">
                     <!--veloso-->
-                    <img src="img/veloso.jpg" alt="veloso">
+                    <img src="img/vida-noturna/veloso.jpg" alt="veloso">
                     <h2>Veloso</h2>
                     <hr>
                     <div class="DesAva">
@@ -147,7 +147,7 @@
                 </div>
                 <div class="bloco">
                     <!--D-edge-->
-                    <img src="img/dedge.jpg" alt="dedge">
+                    <img src="img/vida-noturna/dedge.jpg" alt="dedge">
                     <h2>E-edge</h2>
                     <hr>
                     <div class="DesAva">
@@ -183,7 +183,7 @@
             <div class="barra">
                 <div class="bloco">
                     <!--the week-->
-                    <img src="img/the-week.jpg" alt="the-week">
+                    <img src="img/vida-noturna/the-week.jpg" alt="the-week">
                     <h2>The Week</h2>
                     <hr>
                     <div class="DesAva">
@@ -220,7 +220,7 @@
                 </div>
                 <div class="bloco">
                     <!--villa contry-->
-                    <img src="img/Villa-Country.jpg" alt="Villa-Country">
+                    <img src="img/vida-noturna/Villa-Country.jpg" alt="Villa-Country">
                     <h2>Villa Country</h2>
                     <hr>
                     <div>
