ajuste do rodape

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         </div>
     </div>
-    <footer id="rodape2">
+    <footer class="rodape rodape2">
         <p class="fim">Copyright &copy; Traveller 2021 </p>
     </footer>
 </body>
