--- a/parques.html
+++ b/parques.html
@@ -172,7 +172,7 @@
             </div>
         </div>
     </div>
-    <footer id="rodape">
+    <footer class="rodape">
         <p class="fim">Copyright &copy; Traveller 2021 </p>
     </footer>
 </body>
