--- a/vidanoturna.html
+++ b/vidanoturna.html
@@ -251,7 +251,7 @@
             </div>
         </div>
     </div>
-    <footer id="rodape1">
+    <footer class="rodape rodape1">
         <p class="fim">Copyright &copy; Traveller 2021 </p>
     </footer>
 </body>
