ajuste na pag vida noturna

--- a/vidanoturna.html
+++ b/vidanoturna.html
@@ -160,7 +160,7 @@
                     </div>
                     <div class="list">
                         <ul>
-                            <li> Horario de funcionamento </li>
+                            <li> Horario de funcionamento: Sab 23:00h às 7:00h Qui: 23:00h às 7:00h Sex: 23:00h às 7:00h </li>
                             <li> Melhor dia para visitação </li>
                             <li> Horários de maior procura </li>
                             <li> Preços aplicados </li>
