--- a/parques.html
+++ b/parques.html
@@ -28,7 +28,7 @@
                 <div class="bloco2">
                     <!--Ibirapuera-->
                     <img src="img/ibirapuera.jpg" alt="Ibirapuera">
-                    <h2>Ibirapuera</h2>
+                    <h2>Parque do Ibirapuera</h2>
                     <hr>
                     <div class="DesAva">
                         <!--Descrição e Avaliação-->
@@ -41,7 +41,7 @@
                         <ul>
                             <li>Horario de funcionamento : 05:00 - 00:00</li>
                             <li>Telefone para contato: (11) 5574-5045</li>
-                            <li>Site : <a href="https://parqueibirapuera.org/">https://parqueibirapuera.org</a></li>
+                            <li>Site : <a href="https://parqueibirapuera.org/"target="_blank">https://parqueibirapuera.org</a></li>
                         </ul>
                     </div>
                     <h3>Localização :</h3>
@@ -54,7 +54,7 @@
                 </div>
                 <div class="bloco2">
                     <!--Jardim Botanico-->
-                    <img src="img/jardim-botanico.jpg" alt="jardim-botanico">
+                    <img src="img/jardim-botanico.jpg"target="_blank" alt="jardim-botanico">
                     <h2>Jardim Botanico</h2>
                     <hr>
                     <div class="DesAva">
@@ -71,7 +71,7 @@
                             <li> Telefone para contato : (11) 5067-6000</li>
                             <li> Valor de entrada : R$ 10,00</li>
                             <li> Site : <a
-                                    href="https://jardimbotanico.sp.gov.br/">https://jardimbotanico.sp.gov.br/</a></li>
+                                    href="https://jardimbotanico.sp.gov.br/"target="_blank">https://jardimbotanico.sp.gov.br/</a></li>
                         </ul>
                     </div>
                     <h3>Localização:</h3>
@@ -85,7 +85,7 @@
             <div class="barra">
                 <div class="bloco2">
                     <!--parque alfredo volpi-->
-                    <img src="img/parque-alfredo-volpi.jpg" alt="parque-alfredo-volpi">
+                    <img src="img/parque-alfredo-volpi.jpg"alt="parque-alfredo-volpi">
                     <h2> Parque Alfredo Volpi</h2>
                     <hr>
                     <div class="DesAva">
@@ -100,7 +100,7 @@
                             <li>Horario de funcionamento : 06:00 - 18:00</li>
                             <li>Telefone para contato: (11) 3031-7052</li>
                             <li>Site : <a
-                                    href="https://www.prefeitura.sp.gov.br/cidade/secretarias/meio_ambiente/parques/regiao_centrooeste/index.php?p=5729">parque-alfredo-volpi</a>
+                                    href="https://www.prefeitura.sp.gov.br/cidade/secretarias/meio_ambiente/parques/regiao_centrooeste/index.php?p=5729"target="_blank">parque-alfredo-volpi</a>
                             </li>
                         </ul>
                     </div>
@@ -113,7 +113,7 @@
                 </div>
                 <div class="bloco2">
                     <!--parque buenos aires-->
-                    <img src="img/parque-buenos-aires.jpg" alt="parque-buenos-aires">
+                    <img src="img/parque-buenos-aires.jpg"alt="parque-buenos-aires">
                     <h2>Parque Buenos Aires</h2>
                     <hr>
                     <div class="DesAva">
@@ -128,7 +128,7 @@
                             <li> Horario de funcionamento : 06:00 - 19:00</li>
                             <li> Telefone para contato : (11) 3666-8032</li>
                             <li> Site : <a
-                                    href="https://www.prefeitura.sp.gov.br/cidade/secretarias/meio_ambiente/parques/regiao_centrooeste/index.php?p=5732">parque-buenos-aires</a>
+                                    href="https://www.prefeitura.sp.gov.br/cidade/secretarias/meio_ambiente/parques/regiao_centrooeste/index.php?p=5732"target="_blank">parque-buenos-aires</a>
                             </li>
                         </ul>
                     </div>
@@ -143,7 +143,7 @@
             <div class="barra">
                 <div class="bloco2">
                     <!--parque da independencia-->
-                    <img src="img/parque-da-independencia.jpg" alt="parque-da-independencia">
+                    <img src="img/parque-da-independencia.jpg"alt="parque-da-independencia">
                     <h2>Parque da Independência</h2>
                     <hr>
                     <div class="DesAva">
@@ -158,7 +158,7 @@
                             <li>Horario de funcionamento : 06:00 - 18:00</li>
                             <li>Telefone para contato: (11) 2273-7250</li>
                             <li>Site : <a
-                                    href="https://www.prefeitura.sp.gov.br/cidade/secretarias/meio_ambiente/parques/regiao_sul/index.php?p=5747">parque-da-independencia</a>
+                                    href="https://www.prefeitura.sp.gov.br/cidade/secretarias/meio_ambiente/parques/regiao_sul/index.php?p=5747"target="_blank">parque-da-independencia</a>
                             </li>
                         </ul>
                     </div>
